<resources>
    <string name="app_name">Appetc</string>
    <string name="nombre">NOMBRE</string>
    <string name="nombreUsuario">Introduce tu nombre</string>
    <string name="dni">DNI</string>
    <string name="dniUsuario">Introduce tu DNI</string>
    <string name="edad">EDAD</string>
    <string name="edadUsuario">Introduce tu edad</string>
    <string name="poblacion">POBLACION</string>
    <string name="poblacionUsuario">Introduce tu poblacion</string>
    <string name="lenguaMaterna">LENGUA MATERNA</string>
    <string name="lenguaMaternaUsuario">¿CAstellano o euskara?</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="contraseñaUsuario">Introduce tu contraseña</string>
    <string name="login">LOGIN</string>
    <string name="loginUsuario">Introduce tu login</string>
    <string name="password">CONTRASEÑA</string>
    <string name="passwordUsuario">Introduce tu contraseña</string>
    <string name="comprador">COMPRADOR</string>
    <string name="vendedor">VENDEDOR</string>
    <string name="expresiones">EXPRESIONES</string>
    <string name="palabras">PALABRAS</string>
    <string name="misExpresiones">ESTADO DE MIS EXPRESIONES</string>
    <string name="nuevaExpresion">PREGUNTAR POR UNA NUEVA EXPRESION</string>
    <string name="expresionCast">EXPRESION EN CASTELLANO</string>
    <string name="nuevaCast">Introduce nueva expresion</string>
    <string name="TipoUsuario">TIPO DE USUARIO</string>
    <string name="tipo">¿Vendedor o comprador?</string>
    <string name="responderExpresion">RESPONDER A UNA EXPRESION</string>
    <string name="expresionEusk">EXPRESION EN EUSKARA</string>
    <string name="nuevaEusk">Introduce expresion en euskara</string>
    <string name="carniceria">CARNICERIA</string>
    <string name="pescaderia">PERCADERIA</string>
    <string name="frutasVerduras">FRUTAS Y VERDURAS</string>
    <string name="productos">TODOS LOS PRODUCTOS: DICCIONARIO</string>
    <string name="letra">LETRA</string>
    <string name="letraUsuario">Introudce una letra</string>
</resources>
