<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.ehu.tta.appetc.RegistroActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombreUsuario"/>

        <TextView
            android:text="@string/dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dniUsuario"/>

        <TextView
            android:text="@string/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edadUsuario"/>


    </GridLayout>

</LinearLayout>
