<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorfondo"
    android:orientation="vertical"
    tools:context="es.ehu.tta.appetc.presentacion.NuevaExpresionActivity">

    <TextView
        android:id="@+id/menu_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">


        <TextView
            android:text="@string/expresionCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/expresionCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nuevaCast"/>

        <TextView
            android:text="@string/TipoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tipoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tipo"/>
    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PREGUNTAR NUEVA EXPRESION"
        android:onClick="añadirExpresion"/>
</LinearLayout>
