<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorfondo"
    android:orientation="vertical"
    tools:context="es.ehu.tta.appetc.presentacion.ExpresionesVendedorActivity">

    <TextView
        android:id="@+id/menu_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misExpresiones"
        android:onClick="misExpresiones"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevaExpresion"
        android:onClick="nuevoExpresion"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/responderExpresion"
        android:onClick="responderExpresion"/>

    <ScrollView
        android:id="@+id/scrollvertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_weight="1">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollhorizontal"
            android:scrollbars="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/tablaVendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>

    </ScrollView>

</LinearLayout>
